--- a/phase1/src/CMakeLists.txt
+++ b/phase1/src/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT(generator)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-add_executable(${PROJECT_NAME} generator.cpp shapes/point.cpp shapes/plane.cpp shapes/box.cpp shapes/cone.cpp shapes/sphere.cpp)
+add_executable(${PROJECT_NAME} generator.cpp shapes/point.cpp shapes/plane.cpp shapes/box.cpp shapes/cone.cpp shapes/sphere.cpp ../include/tinyxml2/tinyxml2.cpp)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
@@ -57,7 +57,7 @@ PROJECT(engine)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-add_executable(${PROJECT_NAME} engine.cpp shapes/point.cpp shapes/plane.cpp shapes/box.cpp shapes/cone.cpp shapes/sphere.cpp)
+add_executable(${PROJECT_NAME} engine.cpp shapes/point.cpp shapes/plane.cpp shapes/box.cpp shapes/cone.cpp shapes/sphere.cpp ../include/tinyxml2/tinyxml2.cpp)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
